--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+
+    <script src="styles/dist/sweetalert.js"></script>
+    <link rel="stylesheet" href="styles/dist/sweetalert.css">
 </body>
 
 </html>
